--- a/_posts/2019-03-26-hello.md
+++ b/_posts/2019-03-26-hello.md
@@ -38,8 +38,10 @@ There are 2 parts for the deep learning course and for the moment, I haven't sta
 
 Fast.ai is based on pytorch but I try to practice with Tensorflow also.
 
-You can see it as a couple of low level API + High level API : 
+You can see it as a couple of Low level API + High level API : 
 
+| Library | Url |
+| :------ |:--- |
 | Tensorflow + Keras | [https://www.tensorflow.org/](https://www.tensorflow.org/) | [https://keras.io/](https://keras.io/) |
 | PyTorch + Fastai | [https://pytorch.org/](https://pytorch.org/) | [https://docs.fast.ai/](https://docs.fast.ai/) |
 
