New blog post about GPT2

--- a/_posts/2019-03-26-hello.md
+++ b/_posts/2019-03-26-hello.md
@@ -10,6 +10,8 @@ comments: true
 
 My name is Alex, I live in Montreal and I'm passionnate about DataScience topics and Mobile app developpement. This blog aims to present some of my projects and talk about what I have learned during my exploration of the world of data science.
 
+I work in Finance as a Business Analyst BI, I manage marketdata acquisition and transformation for OTC pricing.
+
 I'm not a native English speaker so it will also help me practice my English writing skill :)
 
 ## DataScience
@@ -40,7 +42,7 @@ Fast.ai is based on pytorch but I try to practice with Tensorflow also.
 
 You can see it as a couple of Low level API + High level API : 
 
-| Library | Url |
+| Library | Low Level API |
 | :------ |:--- |
 | Tensorflow + Keras | [https://www.tensorflow.org/](https://www.tensorflow.org/) | [https://keras.io/](https://keras.io/) |
 | PyTorch + Fastai | [https://pytorch.org/](https://pytorch.org/) | [https://docs.fast.ai/](https://docs.fast.ai/) |
