--- a/_posts/2019-04-04-OpenAI-GPT2-117m.md
+++ b/_posts/2019-04-04-OpenAI-GPT2-117m.md
@@ -30,20 +30,20 @@ Let's watch some of the answers to see if it make a bit of sense !
 
 ## Samples
 
-Model prompt >>> Let me tell you a story about AI
+# Model prompt : Let me tell you a story about AI
 ---
 and how would you say it? Don’t worry, I’ve got you covered. The science of AI is still very young and relatively new. The main reason is that neural networks are not hardware friendly. You need a powerful graphics processor and a decent RAM card to feed it. Even then, you might be limited by the computer’s graphic cards. The memory card isn’t big for neural networks and most applications.
 Also, we do not have any hardware right now. The Intel Xeon processor E5–1620 v4 (8 GB L3 cache) is the single most powerful processor in the world. This processor supports 2.4 GB of RAM. Unfortunately, we had to bring it from Slovenia in order to make this recipe.
 If you don’t have the cash to do IT work, but can afford the computer, then this might be your best bet. There are two reasons why I say this recipe is known as “cheap hardware hardware hardware hardware hardware.” The first reason is that neural networks are very hard to tune and would usually fail when this happened. The second reason is that there are a huge number of GPUs on this planet with very little on earth that isn’t tuned to look the part. If we could just import every single pixel of each global illumination into a neural network,we’d be able to create something incredibly impressive like this:
 Unfortunately, we can’t do this — the neural network tends to fail often. So we’re stuck with trying.
 
-Model prompt >>> Let me tell you a story about AI
+# Model prompt : Let me tell you a story about AI
 ---
 and how it’s all going to improve you. First, it all came down to one easy answer: don’t worry about it. I’ll just tell you what to expect.
 There are dozens of easy answers to “Why should I care about AI?” that I’ve seen over the past 15 years of research and development. Most obviously, deep learning is a technology that can learn. Most significantly, convolutional neural networks are an industry-leading technology.
 However, there are challenges. Most obviously, the use of arrays. As an AI, do not open sourced their neural networks unless specifically noted. However, a lot of efforts are being made to bring computational arrays to market. Most notably, the Azure CTO are shipping a staggering amount of software code in bundled updates that are available for both the CLI and the IoT environment. So, while these updates are generally welcomed, most people who are using AI should expect them to be running in a black box.
 
-Model prompt >>> Why is AI trending ?
+# Model prompt : Why is AI trending ?
 ---
 Let’s consider how AI will affect us in the future. Will we have more money, will we take drugs, will we have better relationships, will we have larger families? Will we experience less pain, because we become aware of our limitations more effectively? Many people fear that AI will overload the brain with irrelevant thoughts, reducing activities like planning, learning, and acting. This is the very harmful effect of hyper-automation — which is to inhibit the activities that enhance the benefits of high-level engagement and exploration.
 Impulsive purchases like chess players and car buyers are being trained to acquire more and more of our cognitive potential. Autonomous vehicles are already helping to create quite the social order in the driving world: they can drive like we do, take control of our car like we do, and so forth. But the mechanism behind our cognition is a question that is being driven less and explored, at least in the US.
@@ -54,6 +54,6 @@ We’re not entirely sure where the line draws it, but it’s clear that our rea
 
 ## Results
 
-Some of theses output were quite funy but it's not exactly ready to write a blog post for me ;)
+Some of theses output were quite funny but it's not exactly ready to write a blog post for me ;) I didn't push it too far because it was just a test to practice transfer learning with this LM but I will definitly try more usefull things with it soon.
 
 
