--- a/_posts/2019-04-04-OpenAI-GPT2-117m.md
+++ b/_posts/2019-04-04-OpenAI-GPT2-117m.md
@@ -2,6 +2,7 @@
 layout: post
 title: OpenAI GPT2-117M
 subtitle: Let's have some fun with the new language model release by OpenAI
+bigimg: /img/1280px-OpenAI_Logo.svg.png
 gh-repo: openai/gpt-2
 tags: [Deep Learning, NLP]
 comments: true
