--- a/_posts/2019-04-04-OpenAI-GPT2-117m.md
+++ b/_posts/2019-04-04-OpenAI-GPT2-117m.md
@@ -3,7 +3,7 @@ layout: post
 title: OpenAI GPT2-117M
 subtitle: Let's have some fun with the new language model release by OpenAI
 gh-repo: openai/gpt-2
-tags: [Deep Learning, NLP]
+tags: [DataScience, Deep Learning, NLP]
 comments: true
 ---
 
